syntax = "proto3";

package erc20.types.v1;

message Block {
  repeated BalanceOfStorageChange storage_changes = 1;
}

message BalanceOfStorageChange {
  // contract address
  string address = 1;
   // string name = 2;
  // string decimals = 3;
  string method = 4;

  // storage changes
  string owner = 5;
  string balance = 6;

  // trace information
  string transaction = 7;
}

message Erc20Token {
  string address = 1;
  string name = 2;
  string symbol = 3;
  uint64 decimals = 4;
}


